# my-little-os

./: .asm-lsp.toml  .gdbinit  .gitignore  README.md  build.sh  launch.sh  linkerscript  linkerscript.ld  linkerscript_debug  linkerscript_debug.ld
src/: bootloader.asm  partitions.asm  stage1.asm  stage2.asm
src/kernel/: Cargo.toml  i686-none-eabi.json
src/kernel/.cargo/: config.toml
src/kernel/src/: bios.rs  lib.rs  memory.rs  screen.rs
src/kernel/src/bios/: video.rs
src/kernel/src/memory/: allocator.rs
src/stage1_include/: partitions.asm
src/stage2_include/: bios_writes.asm  constants.asm  gdt.asm  idt.asm  kernel.asm  task.asm
